# iot-loadcell

./: README.md  balance.ino
iot-code/: test.py
iot-code/HX711/: README.md  library.json
iot-code/Scale/: Scale.ino
server/: Cargo.toml  README.md
server/src/: main.rs  tty.rs  tty_discover.rs  ws.rs
web/: .eslintrc  .prettierrc  package.json
web/public/: index.html
web/src/: App.js  App.scss  index.js
web/src/Utils/: Product.js
web/src/api/: index.js
web/src/components/ItemSelect/: ItemSelect.js  index.js
web/src/containers/ScaleOutput/: ScaleOutput.js  index.js
web/src/containers/template/: Template.js  index.js
web/src/views/: index.js  index.scss  routes.js
web/src/views/layouts/SiderLeft/: SiderLeft.js  index.js
web/src/views/layouts/footer/: DefaultFooter.js  index.js
web/src/views/layouts/header/: index.js  index.scss
web/src/views/pages/Dashboard/: Dashboard.js  Dashboard.scss
web/src/views/pages/Statistic/: Statistic.js
