[package]
name = "server"
version = "0.1.0"
authors = ["Duy Do <juchiast@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "3.3"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
futures-util = "0.3"
log = "0.4"
env_logger = "0.7"
warp = { git = "https://github.com/seanmonstar/warp", rev = "b6cbcca0914cfb435ae19c1aab86c0ffa0316322" }
